--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@
   }
   /* Text */
   h1 {
-   @apply text-4xl font-semibold tracking-wide text-red-500 font-display;
+    @apply text-4xl font-semibold tracking-wide text-red-500 font-display;
   }
   h2 {
     @apply text-3xl font-semibold tracking-wide text-red-500 font-display;
@@ -70,6 +70,7 @@
   label {
     @apply text-gray-700;
   }
+
   input {
     @apply px-3 py-2 text-gray-700 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:outline-none focus:ring-red-500;
   }
@@ -89,6 +90,11 @@
   input[type='checkbox'] {
     @apply text-gray-800 placeholder-gray-400 border border-gray-600 focus:ring focus:outline-none focus:ring-orange-550 focus:ring-offset-0;
   }
+
+  textarea {
+    @apply px-3 py-2 text-gray-700 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:outline-none focus:ring-red-500;
+  }
+
   select {
     @apply text-gray-800 border-none rounded-lg shadow-sm focus:ring-2 focus:ring-orange-550;
   }
