--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,10 +26,10 @@
     @apply flex items-center justify-between flex-initial pt-6;
   }
   section {
-    @apply flex flex-col gap-4 p-5 bg-gray-100 rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-5 bg-gray-100 shadow-sm rounded-xl dark:bg-gray-800;
   }
   article {
-    @apply flex flex-col gap-4 p-5 bg-white rounded-xl dark:bg-gray-700 hover:bg-opacity-75 dark:hover:bg-opacity-80;
+    @apply flex flex-col gap-4 p-5 bg-white shadow-sm rounded-xl dark:bg-gray-700 hover:bg-opacity-75 dark:hover:bg-opacity-80;
   }
   form {
     @apply flex flex-col gap-4 p-5 bg-gray-100 rounded-xl dark:bg-gray-800;
@@ -52,7 +52,7 @@
     @apply text-lg font-medium text-gray-800 dark:text-gray-100;
   }
   h5 {
-    @apply font-medium text-gray-800 dark:text-gray-100;
+    @apply -mb-1 text-lg font-semibold text-gray-800 font-display dark:text-gray-100;
   }
   h6 {
     @apply text-sm font-medium text-gray-800 dark:text-gray-100;
