--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,10 +26,10 @@
     @apply flex flex-col gap-4 p-5 bg-gray-100 shadow-sm rounded-xl dark:bg-gray-800;
   }
   article {
-    @apply flex flex-col gap-4 p-5 bg-white shadow-sm rounded-xl dark:bg-gray-700 hover:bg-opacity-75 dark:hover:bg-opacity-80;
+    @apply flex flex-col gap-3 p-5 bg-white shadow-sm rounded-xl dark:bg-gray-700 hover:bg-opacity-75 dark:hover:bg-opacity-80;
   }
   form {
-    @apply flex flex-col gap-4 p-5 bg-gray-100 rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-5 bg-gray-100 shadow-sm rounded-xl dark:bg-gray-800;
   }
   dl {
     @apply flex flex-col gap-4 p-6 bg-white rounded-lg shadow;
@@ -69,7 +69,7 @@
     @apply text-gray-800 dark:text-gray-100 hover:text-gray-900 dark:hover:text-gray-200;
   }
   button {
-    @apply flex justify-center gap-2 px-4 py-2 text-sm font-medium text-white rounded-lg disabled:opacity-50 bg-rose-600 hover:bg-rose-700 focus:bg-rose-800 focus:outline-none;
+    @apply flex justify-center gap-2 px-4 py-2 text-sm font-medium text-white rounded-lg shadow-sm disabled:opacity-50 bg-rose-600 hover:bg-rose-700 focus:bg-rose-800 focus:outline-none;
   }
 
   /* Forms */
