--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   /* Containers */
   body {
-    @apply bg-gray-200 dark:bg-gray-900;
+    @apply bg-gray-100 dark:bg-gray-900;
   }
   #__next {
     @apply flex flex-col min-h-screen gap-6 p-6 mx-auto max-w-7xl;
@@ -23,10 +23,13 @@
     @apply flex items-center justify-between flex-initial pt-6;
   }
   section {
-    @apply flex flex-col gap-4 p-6 bg-gray-100 shadow-sm rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-4 px-6 dark:bg-gray-800 rounded-xl;
   }
   article {
-    @apply flex flex-col gap-4 p-6 bg-white shadow-sm rounded-xl dark:bg-gray-700;
+    @apply flex flex-col gap-4 p-6 bg-white shadow-sm rounded-xl dark:bg-gray-800;
+  }
+  section article {
+    @apply px-0 rounded-none;
   }
   form {
     @apply flex flex-col gap-4 p-6 bg-gray-100 shadow-sm rounded-xl dark:bg-gray-800;
@@ -77,15 +80,15 @@
     @apply text-sm font-medium text-gray-800 dark:text-gray-100;
   }
   input {
-    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-white rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
+    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-gray-100 rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
   }
   input[type='checkbox'] {
-    @apply p-2 bg-white border-none rounded text-rose-600 dark:bg-gray-700 focus:ring-0 focus:ring-offset-0;
+    @apply p-2 bg-gray-100 border-none rounded text-rose-600 dark:bg-gray-700 focus:ring-0 focus:ring-offset-0;
   }
   textarea {
-    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-white border-none rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
+    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-gray-100 border-none rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
   }
   select {
-    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-white border-none rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
+    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-gray-100 border-none rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
   }
 }
