--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@
     @apply flex items-center justify-between flex-initial pt-6;
   }
   section {
-    @apply flex flex-col gap-4 px-6 dark:bg-gray-800 rounded-xl;
+    @apply flex flex-col gap-4 px-6 bg-white dark:bg-gray-800 rounded-xl;
   }
   article {
     @apply flex flex-col gap-4 p-6 bg-white shadow-sm rounded-xl dark:bg-gray-800;
@@ -40,25 +40,25 @@
 
   /* Text */
   h1 {
-    @apply text-4xl font-medium text-gray-800 dark:text-gray-100;
+    @apply text-4xl font-medium text-gray-700 dark:text-gray-200;
   }
   h2 {
-    @apply text-3xl font-medium text-gray-800 dark:text-gray-100;
+    @apply text-3xl font-medium text-gray-700 dark:text-gray-200;
   }
   h3 {
-    @apply text-2xl font-medium text-gray-800 dark:text-gray-100;
+    @apply text-2xl font-medium text-gray-700 dark:text-gray-200;
   }
   h4 {
-    @apply text-lg font-medium text-gray-800 dark:text-gray-100;
+    @apply text-lg font-medium text-gray-700 dark:text-gray-200;
   }
   h5 {
-    @apply -mb-1 text-lg font-medium text-gray-800 dark:text-gray-100;
+    @apply -mb-2 font-medium text-gray-700 dark:text-gray-200;
   }
   h6 {
-    @apply text-sm font-medium text-gray-800 dark:text-gray-100;
+    @apply text-sm font-medium text-gray-800 dark:text-gray-200;
   }
   p {
-    @apply text-sm text-gray-700 dark:text-gray-200;
+    @apply text-sm text-gray-600 dark:text-gray-300;
   }
 
   /* Links */
@@ -66,18 +66,18 @@
     @apply flex items-center gap-1 text-sm font-medium text-rose-600 hover:text-rose-700;
   }
   nav a {
-    @apply text-sm font-medium text-gray-800 hover:text-gray-900 focus:underline dark:text-gray-200 dark:hover:text-gray-300 dark:focus:underline;
+    @apply text-sm font-medium text-gray-700 hover:text-gray-800 dark:text-gray-200 dark:hover:text-gray-300;
   }
   article a {
-    @apply text-gray-800 dark:text-gray-100 hover:text-gray-900 dark:hover:text-gray-200;
+    @apply text-gray-700 dark:text-gray-200 hover:text-gray-800 dark:hover:text-gray-300;
   }
   button {
-    @apply flex justify-center gap-2 px-4 py-2 text-sm font-medium text-white rounded-lg shadow-sm disabled:opacity-50 bg-rose-600 hover:bg-rose-700 focus:bg-rose-800 focus:outline-none;
+    @apply flex justify-center gap-2 px-4 py-2 text-sm font-medium text-white rounded-lg shadow-sm disabled:opacity-50 bg-rose-600 hover:bg-rose-700 focus:outline-none;
   }
 
   /* Forms */
   label {
-    @apply text-sm font-medium text-gray-800 dark:text-gray-100;
+    @apply text-sm font-medium text-gray-700 dark:text-gray-200;
   }
   input {
     @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-gray-100 rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
