refactor: graphql code generator, authentication, navigation, events

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,7 @@
     @apply flex items-center justify-between;
   }
   main {
-    @apply flex flex-col flex-auto gap-6;
+    @apply flex flex-col justify-center flex-auto gap-6;
   }
   aside {
     @apply hidden;
@@ -23,16 +23,16 @@
     @apply flex items-center justify-between flex-initial pt-6;
   }
   section {
-    @apply flex flex-col gap-4 px-6 bg-white shadow-sm dark:bg-gray-800 rounded-xl;
+    @apply flex flex-col gap-4 px-6 bg-white dark:bg-gray-800 rounded-xl;
   }
   article {
-    @apply flex flex-col gap-4 p-6 bg-white shadow-sm rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-6 bg-white rounded-xl dark:bg-gray-800;
   }
   section article {
     @apply px-0 rounded-none shadow-none;
   }
   form {
-    @apply flex flex-col gap-4 p-6 bg-white shadow-sm rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-6 bg-white rounded-xl dark:bg-gray-800;
   }
   dl {
     @apply flex flex-col gap-4 p-6 bg-white rounded-lg shadow;
@@ -40,7 +40,7 @@
 
   /* Text */
   h1 {
-    @apply text-4xl font-medium text-gray-700 dark:text-gray-200;
+    @apply text-4xl font-bold leading-snug font-display text-rose-600;
   }
   h2 {
     @apply text-3xl font-medium text-gray-700 dark:text-gray-200;
@@ -49,49 +49,66 @@
     @apply text-2xl font-medium text-gray-700 dark:text-gray-200;
   }
   h4 {
-    @apply text-lg font-medium text-gray-700 dark:text-gray-200;
+    @apply text-xl font-medium text-gray-700 dark:text-gray-200;
   }
   h5 {
-    @apply -mb-2 font-medium text-gray-700 dark:text-gray-200;
+    @apply -mb-2 text-lg font-medium text-gray-700 dark:text-gray-200;
   }
   h6 {
-    @apply text-sm font-medium text-gray-800 dark:text-gray-200;
+    @apply font-medium text-gray-800 dark:text-gray-200;
   }
   p {
-    @apply text-sm text-gray-600 dark:text-gray-300;
+    @apply text-gray-600 dark:text-gray-300;
   }
 
   /* Links */
   a {
-    @apply flex items-center gap-1 text-sm font-medium text-rose-600 hover:text-rose-700;
+    @apply flex items-center gap-2 font-medium text-rose-600 hover:text-rose-700;
   }
   nav a {
-    @apply text-sm font-medium text-gray-700 hover:text-gray-800 dark:text-gray-200 dark:hover:text-gray-300;
+    @apply font-medium text-gray-700 hover:text-gray-800 dark:text-gray-200 dark:hover:text-gray-300;
   }
   article a {
-    @apply text-gray-700 dark:text-gray-200 hover:text-gray-800 dark:hover:text-gray-300;
+    @apply text-gray-800 dark:text-gray-100 hover:text-gray-900 dark:hover:text-gray-200;
   }
   button {
-    @apply flex justify-center gap-2 px-4 py-2 text-sm font-medium text-white rounded-lg shadow-sm disabled:opacity-50 bg-rose-600 hover:bg-rose-700 focus:outline-none;
+    @apply flex justify-center gap-2 px-4 py-2 font-medium text-white rounded-lg disabled:opacity-50 bg-rose-600 hover:bg-rose-700 focus:outline-none;
   }
 
   /* Forms */
   label {
-    @apply text-sm font-medium text-gray-700 dark:text-gray-200;
+    @apply font-medium text-gray-700 dark:text-gray-200;
   }
   input {
-    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-gray-100 rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
+    @apply px-4 py-2 text-gray-700 placeholder-gray-400 bg-gray-100 rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
   }
   input[type='password'] {
-    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-gray-100 border-none rounded-lg focus:outline-none dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600;
+    @apply px-4 py-2 text-gray-700 placeholder-gray-400 bg-gray-100 border-none rounded-lg focus:outline-none dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600;
   }
   input[type='checkbox'] {
     @apply p-2 bg-gray-100 border-none rounded text-rose-600 dark:bg-gray-700 focus:ring-0 focus:ring-offset-0;
   }
   textarea {
-    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-gray-100 border-none rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
+    @apply px-4 py-2 text-gray-700 placeholder-gray-400 bg-gray-100 border-none rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
   }
   select {
-    @apply px-4 py-2 text-sm text-gray-700 placeholder-gray-400 bg-gray-100 border-none rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
+    @apply px-4 py-2 text-gray-700 placeholder-gray-400 bg-gray-100 border-none rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
+  }
+  svg {
+    @apply w-5 h-5;
+  }
+}
+
+@layer components {
+  .navigation {
+    @apply px-5 py-3 rounded-lg;
+  }
+
+  .navigation-active {
+    @apply text-gray-700 bg-white hover:text-gray-800 dark:text-gray-200 dark:bg-gray-800 dark:hover:text-gray-100;
+  }
+
+  .navigation-inactive {
+    @apply text-gray-600 hover:bg-white hover:text-gray-700 dark:text-gray-300 dark:hover:bg-gray-800 dark:hover:text-gray-200;
   }
 }
