--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,7 @@
     @apply flex items-center justify-between;
   }
   main {
-    @apply flex flex-col justify-center flex-auto gap-6;
+    @apply flex flex-col flex-auto gap-6;
   }
   aside {
     @apply hidden;
@@ -30,9 +30,6 @@
   }
   article {
     @apply flex flex-col gap-4 p-6 bg-white md:rounded-xl dark:bg-gray-800;
-  }
-  section article {
-    @apply px-0 rounded-none shadow-none;
   }
   form {
     @apply flex flex-col gap-4 p-6 bg-white rounded-xl dark:bg-gray-800;
@@ -58,7 +55,7 @@
     @apply -mb-2 text-lg font-medium text-gray-700 dark:text-gray-200;
   }
   h6 {
-    @apply font-medium text-gray-800 dark:text-gray-200;
+    @apply font-medium text-gray-700 dark:text-gray-200;
   }
   p {
     @apply text-gray-600 dark:text-gray-300;
@@ -72,10 +69,10 @@
     @apply font-medium text-gray-700 hover:text-gray-800 dark:text-gray-200 dark:hover:text-gray-300;
   }
   article a {
-    @apply text-gray-800 dark:text-gray-100 hover:text-gray-900 dark:hover:text-gray-200;
+    @apply text-gray-700 dark:text-gray-200 hover:text-gray-800 dark:hover:text-gray-300;
   }
   button {
-    @apply flex justify-center gap-2 px-4 py-2 font-medium text-white rounded-lg disabled:opacity-50 bg-rose-600 hover:bg-rose-700 focus:outline-none;
+    @apply flex items-center justify-center gap-2 px-4 py-2 font-medium text-white rounded-lg place-self-start disabled:opacity-50 bg-rose-600 hover:bg-rose-700 focus:outline-none;
   }
 
   /* Forms */
@@ -97,8 +94,12 @@
   select {
     @apply px-4 py-2 text-gray-700 placeholder-gray-400 bg-gray-100 border-none rounded-lg dark:text-gray-200 dark:bg-gray-700 dark:placeholder-gray-500 invalid:border invalid:border-rose-600 focus:outline-none;
   }
+  /* Icons  */
   svg {
     @apply w-5 h-5;
+  }
+  article svg {
+    @apply text-gray-400 dark:text-gray-500;
   }
 }
 
@@ -113,5 +114,14 @@
 
   .navigation-inactive {
     @apply text-gray-600 hover:bg-white hover:text-gray-700 dark:text-gray-300 dark:hover:bg-gray-800 dark:hover:text-gray-200;
+  }
+  .badge {
+    @apply px-3 py-1 text-sm font-medium rounded-full bg-rose-100 text-rose-600 dark:bg-rose-600 dark:text-rose-100;
+  }
+  .rounded-button-solid {
+    @apply px-4 py-1 border-2 rounded-full hover:border-rose-700 border-rose-600;
+  }
+  .rounded-button-outline {
+    @apply px-4 py-1 bg-white border-2 rounded-full dark:bg-gray-800 text-rose-600 border-rose-600 hover:bg-gray-100;
   }
 }
