--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@
     @apply flex items-center justify-between p-5;
   }
   section {
-    @apply flex flex-col gap-3 bg-white dark:bg-gray-900;
+    @apply flex flex-col gap-3;
   }
   article {
     @apply flex flex-col gap-3 p-5 bg-white border border-gray-200 rounded-lg dark:border-gray-700 dark:bg-gray-800;
@@ -66,15 +66,21 @@
     @apply flex items-center gap-2 text-sm font-medium text-gray-800 transition-transform dark:text-gray-100 hover:-translate-y-px active:translate-y-px;
   }
   button {
-    @apply flex items-center justify-center gap-2 px-4 py-2 text-sm font-medium text-white transition-transform border rounded-full active:translate-y-px bg-rose-600 border-rose-600 hover:-translate-y-px;
+    @apply flex items-center justify-center gap-2 px-4 py-1 text-sm font-medium text-white transition-transform border rounded-full active:translate-y-px bg-rose-600 border-rose-600 hover:-translate-y-px;
   }
 
   /* Forms */
   label {
     @apply text-sm font-medium text-gray-800 dark:text-gray-100;
   }
+  input:-webkit-autofill {
+    @apply bg-white dark:bg-gray-700;
+  }
+  input:autofill {
+    @apply bg-white dark:bg-gray-700;
+  }
   input {
-    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply px-4 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   input[type='password'] {
     @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
@@ -90,35 +96,21 @@
   }
   /* Icons  */
   svg {
-    @apply w-5 h-5;
+    @apply w-5 h-5 text-gray-500 dark:text-gray-400;
   }
 }
 
 @layer components {
-  .navigation {
-    @apply px-5 py-3 rounded-lg;
+  .nav {
+    @apply px-5 py-3 transition-none rounded-lg transform-none;
   }
-
-  .navigation-active {
-    @apply text-gray-700 bg-white hover:text-gray-800 dark:text-gray-200 dark:bg-gray-800 dark:hover:text-gray-100;
+  .nav-active {
+    @apply transition-none bg-white border border-gray-200 dark:border-gray-700 dark:text-gray-100 dark:bg-gray-800;
   }
-
-  .navigation-inactive {
-    @apply text-gray-600 hover:bg-white hover:text-gray-700 dark:text-gray-300 dark:hover:bg-gray-800 dark:hover:text-gray-200;
-  }
-  .button-neutral {
-    @apply flex items-center justify-center gap-2 px-4 py-2 font-medium text-gray-600 hover:rounded-lg dark:text-gray-200 place-self-start hover:bg-gray-100 focus:outline-none;
-  }
-  .button-highlight {
-    @apply flex items-center justify-center gap-2 px-4 py-2 font-medium text-white rounded-lg place-self-start bg-rose-600 hover:bg-rose-700 focus:outline-none;
+  .nav-inactive {
+    @apply text-gray-700 hover:text-gray-800 dark:hover:text-gray-100 hover:border-gray-200 hover:border dark:hover:border-gray-700 dark:text-gray-200 hover:bg-white dark:hover:bg-gray-800;
   }
   .badge {
     @apply px-3 py-1 text-sm font-medium rounded-full bg-rose-100 text-rose-600 dark:bg-rose-600 dark:text-rose-100;
-  }
-  .rounded-button-solid {
-    @apply px-4 py-1 border-2 rounded-full hover:border-rose-700 border-rose-600;
-  }
-  .rounded-button-outline {
-    @apply px-4 py-1 bg-white border-2 rounded-full dark:bg-gray-800 text-rose-600 border-rose-600 hover:bg-gray-100;
   }
 }
