--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,10 +63,10 @@
 
   /* Links */
   a {
-    @apply flex items-center gap-2 text-sm font-medium text-gray-800 transition-transform dark:text-gray-100 hover:-translate-y-px active:translate-y-px;
+    @apply flex items-center gap-2 text-sm font-medium text-gray-800 transition hover:text-gray-900 dark:text-gray-100 active:translate-y-px;
   }
   button {
-    @apply flex items-center justify-center gap-2 px-4 py-1 text-sm font-medium text-white transition-transform border rounded-full active:translate-y-px bg-rose-600 border-rose-600 hover:-translate-y-px;
+    @apply flex items-center justify-center gap-2 px-4 py-1 text-sm font-medium text-white transition border rounded-full hover:bg-rose-700 active:translate-y-px bg-rose-600 border-rose-600;
   }
 
   /* Forms */
@@ -80,7 +80,7 @@
     @apply bg-white dark:bg-gray-700;
   }
   input {
-    @apply px-4 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply px-4 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-rose-600;
   }
   input[type='password'] {
     @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
@@ -102,15 +102,18 @@
 
 @layer components {
   .nav {
-    @apply px-5 py-3 transition-none rounded-lg transform-none;
+    @apply px-5 py-3 rounded-lg;
   }
   .nav-active {
-    @apply transition-none bg-white border border-gray-200 dark:border-gray-700 dark:text-gray-100 dark:bg-gray-800;
+    @apply bg-white border border-gray-200 dark:border-gray-700 dark:text-gray-100 dark:bg-gray-800;
   }
   .nav-inactive {
     @apply text-gray-700 hover:text-gray-800 dark:hover:text-gray-100 hover:border-gray-200 hover:border dark:hover:border-gray-700 dark:text-gray-200 hover:bg-white dark:hover:bg-gray-800;
   }
   .badge {
     @apply px-3 py-1 text-sm font-medium rounded-full bg-rose-100 text-rose-600 dark:bg-rose-600 dark:text-rose-100;
+  }
+  .divide {
+    @apply divide-y divide-gray-200 dark:divide-gray-700;
   }
 }
