--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,13 +29,13 @@
     @apply flex flex-col gap-3;
   }
   article {
-    @apply flex flex-col gap-3 p-5 bg-white border border-gray-200 rounded-lg dark:border-gray-700 dark:bg-gray-800;
+    @apply flex flex-col gap-3 p-5 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 dark:bg-gray-800;
   }
   form {
-    @apply flex flex-col gap-3 p-5 bg-white border border-gray-200 rounded-lg dark:border-gray-700 dark:bg-gray-800;
+    @apply flex flex-col gap-3 p-5 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 dark:bg-gray-800;
   }
   dl {
-    @apply flex flex-col gap-3 p-5 bg-white border border-gray-200 rounded-lg dark:border-gray-700 dark:bg-gray-800;
+    @apply flex flex-col px-5 pt-5 pb-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 dark:bg-gray-800;
   }
 
   /* Text */
@@ -63,10 +63,10 @@
 
   /* Links */
   a {
-    @apply flex items-center gap-2 text-sm font-medium text-gray-800 transition hover:text-gray-900 dark:text-gray-100 active:translate-y-px;
+    @apply flex items-center gap-2 text-sm font-medium text-gray-800 transition hover:-translate-y-px hover:text-gray-900 dark:text-gray-100 active:translate-y-px;
   }
   button {
-    @apply flex items-center justify-center gap-2 px-4 py-1 text-sm font-medium text-white transition border rounded-full hover:bg-rose-700 active:translate-y-px bg-rose-600 border-rose-600;
+    @apply flex items-center justify-center gap-2 px-4 py-1 text-sm font-medium text-white transition border rounded-full shadow-sm hover:-translate-y-px hover:bg-rose-700 active:translate-y-px bg-rose-600 border-rose-600 hover:border-rose-700;
   }
 
   /* Forms */
@@ -80,19 +80,19 @@
     @apply bg-white dark:bg-gray-700;
   }
   input {
-    @apply px-4 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-rose-600;
+    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md shadow-sm hover:-translate-y-px dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-rose-600;
   }
   input[type='password'] {
-    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
+    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md shadow-sm focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
   }
   input[type='checkbox'] {
-    @apply p-2 text-sm bg-gray-100 border border-gray-200 rounded dark:bg-gray-600 text-rose-600 dark:border-gray-700 focus:ring-transparent focus:outline-none focus:ring-offset-0;
+    @apply p-2 text-sm bg-gray-100 border border-gray-200 rounded shadow-sm dark:bg-gray-600 text-rose-600 dark:border-gray-700 focus:ring-transparent focus:outline-none focus:ring-offset-0;
   }
   textarea {
-    @apply h-24 px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md resize-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply h-24 px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md shadow-sm resize-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   select {
-    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md shadow-sm dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   /* Icons  */
   svg {
@@ -105,15 +105,18 @@
     @apply px-5 py-3 rounded-lg;
   }
   .nav-active {
-    @apply bg-white border border-gray-200 dark:border-gray-700 dark:text-gray-100 dark:bg-gray-800;
+    @apply bg-white border border-gray-200 shadow-sm dark:border-gray-700 dark:text-gray-100 dark:bg-gray-800;
   }
   .nav-inactive {
-    @apply text-gray-700 hover:text-gray-800 dark:hover:text-gray-100 hover:border-gray-200 hover:border dark:hover:border-gray-700 dark:text-gray-200 hover:bg-white dark:hover:bg-gray-800;
+    @apply text-gray-700 hover:text-gray-800 dark:hover:text-gray-300 dark:text-gray-200;
   }
   .badge {
     @apply px-3 py-1 text-sm font-medium rounded-full bg-rose-100 text-rose-600 dark:bg-rose-600 dark:text-rose-100;
   }
   .divide {
     @apply divide-y divide-gray-200 dark:divide-gray-700;
+  }
+  .button-outline {
+    @apply bg-white dark:bg-gray-800 hover:bg-white dark:hover:bg-gray-800 hover:text-rose-700 text-rose-600;
   }
 }
