--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,13 +29,13 @@
     @apply flex flex-col gap-5;
   }
   article {
-    @apply flex flex-col gap-3 p-5 bg-white border border-gray-200 shadow-sm md:rounded-xl dark:border-gray-700 dark:bg-gray-800;
+    @apply flex flex-col gap-3 p-5 bg-white border-t border-b border-gray-200 shadow-sm md:border-l md:border-r md:rounded-xl dark:border-gray-700 dark:bg-gray-800;
   }
   form {
-    @apply flex flex-col gap-3 p-5 bg-white border border-gray-200 shadow-sm md:rounded-xl dark:border-gray-700 dark:bg-gray-800;
+    @apply flex flex-col gap-3 p-5 bg-white border-t border-b border-gray-200 shadow-sm md:border-l md:border-r md:rounded-xl dark:border-gray-700 dark:bg-gray-800;
   }
   dl {
-    @apply flex flex-col px-5 pt-5 pb-2 bg-white border border-gray-200 shadow-sm md:rounded-xl dark:border-gray-700 dark:bg-gray-800;
+    @apply flex flex-col px-5 pt-5 pb-2 bg-white border-t border-b border-gray-200 shadow-sm md:border-l md:border-r md:rounded-xl dark:border-gray-700 dark:bg-gray-800;
   }
 
   /* Text */
@@ -63,7 +63,7 @@
 
   /* Links */
   a {
-    @apply flex items-center flex-auto gap-2 text-sm font-medium text-gray-800 transition hover:-translate-y-px hover:text-gray-900 dark:text-gray-100 active:translate-y-px;
+    @apply flex items-center gap-2 text-sm font-medium text-gray-800 transition hover:-translate-y-px hover:text-gray-900 dark:text-gray-100 active:translate-y-px;
   }
   button {
     @apply flex items-center justify-center gap-1 px-3 py-1 text-sm font-medium text-white transition border rounded-full shadow-sm hover:-translate-y-px hover:bg-rose-700 active:translate-y-px bg-rose-600 border-rose-600 hover:border-rose-700;
@@ -83,7 +83,7 @@
     @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-rose-600;
   }
   input[type='password'] {
-    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
+    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md focus:border-rose-600 focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
   }
   input[type='checkbox'] {
     @apply p-2 text-sm bg-gray-100 border border-gray-200 rounded dark:bg-gray-600 text-rose-600 dark:border-gray-700 focus:ring-transparent focus:outline-none focus:ring-offset-0;
