--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,19 +80,19 @@
     @apply bg-white dark:bg-gray-700;
   }
   input {
-    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-rose-600;
+    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   input[type='password'] {
-    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md focus:border-rose-600 focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
+    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md dark:focus:border-rose-600 focus:border-rose-600 focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
   }
   input[type='checkbox'] {
-    @apply p-2 text-sm bg-gray-100 border border-gray-200 rounded dark:bg-gray-600 text-rose-600 dark:border-gray-700 focus:ring-transparent focus:outline-none focus:ring-offset-0;
+    @apply p-2 text-sm transition bg-gray-100 border border-gray-200 rounded dark:bg-gray-700 text-rose-600 dark:border-gray-600 focus:ring-transparent focus:outline-none focus:ring-offset-0;
   }
   textarea {
-    @apply h-24 px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md resize-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply w-full h-24 px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md resize-none dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   select {
-    @apply px-3 py-2 text-sm text-gray-800 placeholder-gray-500 bg-gray-100 border border-gray-200 rounded-md dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   /* Icons  */
   svg {
@@ -121,5 +121,11 @@
   }
   .link-primary {
     @apply flex items-center gap-2 text-sm font-medium transition text-rose-600 hover:-translate-y-px hover:text-rose-700 active:translate-y-px;
+  }
+  .clickable {
+    @apply transition-transform cursor-pointer hover:-translate-y-px active:translate-y-px;
+  }
+  .bordered {
+    @apply border border-gray-200 dark:border-gray-700;
   }
 }
