--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -122,6 +122,9 @@
   .button-upload {
     @apply flex items-center justify-center gap-1 px-3 py-2 text-gray-800 transition bg-white rounded-full shadow-sm hover:text-gray-900 dark:text-gray-100 dark:hover:text-white hover:bg-gray-100 bordered clickable-float dark:bg-gray-800 dark:hover:bg-gray-900;
   }
+  .button-secondary {
+    @apply border-none bg-rose-200 dark:bg-rose-200 hover:bg-rose-300 dark:hover:bg-rose-300 text-rose-600 dark:text-rose-600 dark:border-none;
+  }
   .icon-upload {
     @apply text-gray-800 hover:text-gray-900 dark:text-gray-100 dark:hover:text-white;
   }
