--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   /* Containers */
   body {
-    @apply bg-gray-100 dark:bg-gray-900;
+    @apply bg-rose-50 dark:bg-gray-900;
   }
   #__next {
     @apply flex flex-col min-h-screen mx-auto max-w-7xl;
@@ -29,13 +29,13 @@
     @apply flex flex-col gap-3;
   }
   article {
-    @apply flex flex-col gap-3 p-5 bg-white border-t border-b border-gray-200 shadow-sm md:border-l md:border-r md:rounded-xl dark:border-gray-700 dark:bg-gray-800;
+    @apply flex flex-col gap-3 p-5 bg-white md:rounded-xl dark:bg-gray-800;
   }
   form {
-    @apply flex flex-col gap-3 p-5 bg-white border-t border-b border-gray-200 shadow-sm md:border-l md:border-r md:rounded-xl dark:border-gray-700 dark:bg-gray-800;
+    @apply flex flex-col gap-3 p-5 bg-white md:rounded-xl dark:bg-gray-800;
   }
   dl {
-    @apply flex flex-col px-5 pt-5 pb-2 bg-white border-t border-b border-gray-200 shadow-sm md:border-l md:border-r md:rounded-xl dark:border-gray-700 dark:bg-gray-800;
+    @apply flex flex-col px-5 pt-5 pb-2 bg-white md:rounded-xl dark:bg-gray-800;
   }
 
   /* Text */
@@ -66,7 +66,7 @@
     @apply flex items-center gap-2 text-sm font-medium text-gray-800 transition hover:-translate-y-px hover:text-gray-900 dark:hover:text-white dark:text-gray-100 active:translate-y-px;
   }
   button {
-    @apply flex items-center justify-center gap-2 px-4 py-2 text-sm font-medium text-white transition border rounded-full shadow-sm hover:-translate-y-px hover:bg-rose-700 active:translate-y-px bg-rose-600 border-rose-600 hover:border-rose-700 disabled:pointer-events-none disabled:opacity-75;
+    @apply flex items-center justify-center gap-2 px-4 py-2 text-sm font-medium text-white transition border rounded-full hover:-translate-y-px hover:bg-rose-700 active:translate-y-px bg-rose-600 border-rose-600 hover:border-rose-700 disabled:pointer-events-none disabled:opacity-75;
   }
 
   /* Forms */
@@ -80,19 +80,19 @@
     @apply bg-white dark:bg-gray-700;
   }
   input {
-    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   input[type='password'] {
-    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md dark:focus:border-rose-600 focus:border-rose-600 focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
+    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 focus:outline-none dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:ring-1 focus:ring-rose-600;
   }
   input[type='checkbox'] {
-    @apply p-2 text-sm transition bg-gray-100 border border-gray-200 rounded dark:bg-gray-700 text-rose-600 dark:border-gray-600 focus:ring-transparent focus:outline-none focus:ring-offset-0;
+    @apply p-2 text-sm transition bg-gray-100 border rounded dark:bg-gray-700 text-rose-600 dark:border-gray-600 focus:ring-transparent focus:outline-none focus:ring-offset-0;
   }
   textarea {
-    @apply w-full h-24 px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md resize-none dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply w-full h-24 px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border rounded-md resize-none dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   select {
-    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border border-gray-200 rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
+    @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
   }
   /* Icons  */
   svg {
@@ -105,7 +105,7 @@
     @apply px-5 py-3 rounded-lg;
   }
   .nav-active {
-    @apply text-gray-800 bg-white border border-gray-200 shadow-sm hover:text-gray-900 dark:border-gray-700 dark:text-gray-100 dark:hover:text-white dark:bg-gray-800;
+    @apply text-gray-800 bg-white border hover:text-gray-900 dark:text-gray-100 dark:hover:text-white dark:bg-gray-800;
   }
   .nav-inactive {
     @apply text-gray-700 hover:text-gray-800 dark:hover:text-gray-100 dark:text-gray-200;
@@ -120,7 +120,7 @@
     @apply bg-white dark:bg-gray-800 hover:bg-white dark:hover:bg-gray-800 hover:text-rose-700 text-rose-600;
   }
   .button-upload {
-    @apply flex items-center justify-center gap-1 px-4 py-2 text-gray-800 transition bg-white rounded-full shadow-sm hover:text-gray-900 dark:text-gray-100 dark:hover:text-white hover:bg-gray-100 bordered clickable-float dark:bg-gray-800 dark:hover:bg-gray-900;
+    @apply flex items-center justify-center gap-1 px-4 py-2 text-gray-800 transition bg-white rounded-full hover:text-gray-900 dark:text-gray-100 dark:hover:text-white hover:bg-gray-100 bordered clickable-float dark:bg-gray-800 dark:hover:bg-gray-900;
   }
   .button-secondary {
     @apply border-none bg-rose-200 dark:bg-rose-200 hover:bg-rose-300 dark:hover:bg-rose-300 text-rose-600 dark:text-rose-600 dark:border-none;
@@ -138,6 +138,6 @@
     @apply transition-transform cursor-pointer hover:scale-110 active:translate-y-px;
   }
   .bordered {
-    @apply border border-gray-200 dark:border-gray-700;
+    @apply border;
   }
 }
