--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   /* Containers */
   body {
-    @apply bg-rose-50 dark:bg-gray-900;
+    @apply bg-gray-100 dark:bg-gray-900;
   }
   #__next {
     @apply flex flex-col min-h-screen;
@@ -14,25 +14,25 @@
     @apply fixed z-10 w-full px-6 py-4 bg-rose-500;
   }
   nav {
-    @apply flex items-center justify-between gap-6 mx-auto max-w-7xl;
+    @apply flex items-center justify-between gap-6 px-6 mx-auto max-w-7xl;
   }
   main {
-    @apply flex flex-col flex-auto gap-3 mx-auto max-w-7xl;
+    @apply flex flex-col flex-auto gap-4 mx-auto max-w-7xl;
   }
   aside {
     @apply hidden;
   }
   footer {
-    @apply flex items-center justify-between p-5;
+    @apply flex items-center justify-between p-6;
   }
   section {
-    @apply flex flex-col gap-3;
+    @apply flex flex-col gap-4;
   }
   article {
-    @apply flex flex-col gap-3 p-5 bg-white md:rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-6 bg-white md:rounded-xl dark:bg-gray-800;
   }
   form {
-    @apply flex flex-col gap-3 p-5 bg-white md:rounded-xl dark:bg-gray-800;
+    @apply flex flex-col gap-4 p-6 bg-white md:rounded-xl dark:bg-gray-800;
   }
   dl {
     @apply flex flex-col px-5 pt-5 pb-2 bg-white md:rounded-xl dark:bg-gray-800;
@@ -73,7 +73,7 @@
   label {
     @apply text-sm font-medium text-gray-800 dark:text-gray-100;
   }
-  input:-webkit-autofill {
+  /* input:-webkit-autofill {
     @apply bg-white dark:bg-gray-700;
   }
   input:autofill {
@@ -93,7 +93,7 @@
   }
   select {
     @apply w-full px-3 py-2 text-sm text-gray-800 placeholder-gray-500 transition bg-gray-100 border rounded-md dark:focus:border-rose-600 focus:border-rose-600 dark:bg-gray-700 dark:text-gray-100 dark:border-gray-600 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-rose-600;
-  }
+  } */
   /* Icons  */
   svg {
     @apply w-5 h-5 text-gray-500 dark:text-gray-400;
