--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -152,6 +152,6 @@
     @apply text-gray-400 dark:text-gray-500;
   }
   .modal {
-    @apply flex flex-col w-full max-w-2xl gap-4 p-6 bg-white rounded-lg dark:bg-gray-800;
+    @apply flex flex-col w-full max-w-xl gap-4 p-6 bg-white rounded-lg dark:bg-gray-800;
   }
 }
