refactor: footer styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,7 +23,7 @@
     @apply hidden;
   }
   footer {
-    @apply flex items-center justify-between p-6;
+    @apply fixed bottom-0 z-10 w-full py-4 bg-white dark:bg-gray-900;
   }
   section {
     @apply flex flex-col gap-4;
